--- a/paper/sections/use-cases.tex
+++ b/paper/sections/use-cases.tex
@@ -87,7 +87,7 @@ Gambling				&	&\full	&	&\full	&	&	&	&		&	&	&	&	&	&	&	&	&	&	&	\\
 \subsection{Ideal Use Cases}
 In this subsection, we describe the use cases that could benefit the most from the application of Blockchain technology.
 
-\subsubsection{Asset Tracking} Blockchain technology can be used for tracking assets that are globally distributed, valuable, and whose provenance is of interest, when resilience and audibility are important.  Examples that have been proposed and would last for long durations include artwork and diamonds.  In addition, large organizations have valuable assets that are globally dispersed and information about any single asset is distributed.  Maintaining control of those inventories is essential to efficient and effective operations.  Examples include vehicles owned by shipping companies and rental companies.  Finally, there's also a short-term version of asset management that is of interest: sometimes it's useful to track packages that are being shipped over long distances, and which will change hands many times in the process.  Analysis of interest include identifying the last known locations and durations that the asset spends in specific places or transiting between places.
+\subsubsection{Asset Tracking} Blockchain technology can be used for tracking assets that are globally distributed, valuable, and whose provenance is of interest, when resilience and audibility are important.  Examples that have been proposed and would last for long durations include artwork and diamonds.  In addition, large organizations have valuable assets that are globally dispersed and information about any single asset is distributed.  Maintaining control of those inventories is essential to efficient and effective operations.  Examples include vehicles owned by shipping companies and rental companies.  Finally, there's also a short-term version of asset management that is of interest: sometimes it's useful to track packages that are being shipped over long distances, and which will change hands many times in the process.  Analyses of interest include identifying the last known locations and durations that the asset spends in specific places or transiting between places.
 
 \subsubsection{Supply Chain Management}
 To support this, asset tracking needs to be augmented with a mechanism enabling multiple items to be combined into a single new item.  Most complex devices built today require parts that are built by multiple companies, assembled into a useful whole. Here information can distributed: multiple suppliers could be creating the same parts, and multiple assembly plants can remove those parts from inventory and produce the assembled products.  An important element of the profitability of a company comes from careful management of this supply chain and the inventory that is developed by the companies.  Thus analysis needs to support the inventory turnover metric which is used to determine the quality of supply chain management.
@@ -100,17 +100,17 @@ There is ongoing research that demonstrates how Blockchain technology can be use
 On-chain tokens can be used to represent digital and real-world resources.
 These resources can then be traded between individuals.
 These transactions can be tracked in a Blockchain.
-Tthis provides the provenance and resilience necessary for such transactions.
-the use of shared governance also allows interested parties to run this transaction processing instead of a single large organization.
+This provides the provenance and resilience necessary for such transactions.
+The use of shared governance also allows interested parties to run this transaction processing instead of a single large organization.
 
 \subsubsection{Fine-grained Access Control}
-While access control systems are nominally distributed---it might require several written signatures to get permissions on a system---in practice it is highly centralized---a single administrator can unilaterally grant nearly any access to the network.
+In practice, access control systems are often centralized. They are sometimes nominally distributed -- for example, requiring several written signatures on a form before a system administrator will grant a new permission -- but even these systems are essentially centralized as a single administrator can unilaterally grant nearly any privilege in the system.
 Blockchain technology's shared governance could allow for true fine-grained and decentralized access control.
 When permissions are needed, those responsible (and not an administrator) can directly approve the permissions and smart contracts can ensure that the permissions is granted if and only if all necessary approvals are given.
 Additionally, the provenance information associated with the access control can be used to rollback changes made by users if those users are later shown to have been compromised.
 
 \subsubsection{Data Sharing}
-One key challenge when sharing data between multiple organizations is that no organizations wants to get up ownership and control of their own data.
+One key challenge when sharing data between multiple organizations is that no organization wants to give up ownership and control of their own data.
 Blockchain technology's shared governance model allows all parties to share data while still retaining control of their own data.
 Importantly, it is not the data that is stored on the Blockchain, but rather the access control rules and access attempts.
 The data itself continues to be stored by the organization that owns/controls it.
@@ -125,9 +125,9 @@ Finally, the resilience of Blockchain technology is important in prevent cyber-a
 In this subsection, we describe the use cases that could benefit from Blockchain technology if there is a need for shared governance, provenance, and/or high-level reliability.
 
 \subsubsection{Identity Management}
-Identities along with cryptographic attestations about properties for those identities (e.g., over 18, has a driver's license) can be written to the Blockchain.
+Identities along with cryptographic attestations about properties for those identities (e.g., over 18 years of age, has a driver's license) can be written to the Blockchain.
 These identities and attestations can then be used by other systems to support their access control policies.
-Importantly, this identity information comes with full provenance. This could be useful in determine suspicious activity (e.g., having an age that jumps around).
+Importantly, this identity information comes with full provenance. This could be useful in determine suspicious activity (e.g., having an age that is not increasing linearly).
 This could also be a quicker and more performant way of establishing identity than the current certificate authority system.
 
 \subsubsection{Auctions/Markets}
@@ -137,14 +137,14 @@ When a bid or offer is accepted, that acceptance could be recorded on the Blockc
 Blockchain is most appropriate when the items being sold are of high value and are not owned by a single, centralized entity.
 
 \subsubsection{Record Storage}
-A Blockchain system's append-only ledger can be used to stored documents, including the history of changes to these documents.
+A Blockchain system's append-only ledger can be used to store documents, including the history of changes to these documents.
 This use case is best suited for records that are highly valuable, such as documents that establish the identity of an individual or their status in a nation-state (e.g., marriage license).
 In these situations, it might be worthwhile to have a Blockchain system to leverage the resilience it provides.
 
 \subsubsection{IoT/Smart Properties}
 IoT devices occasionally have the need to collectively make decisions.
 In these cases, Blockchain technology can provide a technological platform for making these collective decisions in an auditable fashion.
-This auditability is especially important as IoT devices are notoriously untrustworthy, and the ability to latter audit and analyze their actions is invaluable.
+This auditability is especially important as IoT devices are notoriously untrustworthy due to insufficient security, and the ability to later audit and analyze their actions is invaluable.
 Additionally, the replication inherent to Blockchain technology means that even if a subset of the IoT devices is lost (e.g., destroyed sensors in a storm), it can still be possible to record the entire provenance of all devices.
 
 \subsubsection{Insurance}
@@ -154,7 +154,7 @@ The auditability provides assurances to customers.
 Additionally, having insurers collectively govern and operate this system could ensure that claims are properly settled when they involve multiple insurers.
 
 \subsubsection{Regulation/Sanctions}
-Much like the insurance use cases, regulations can be written to a Blockchain and as off-chain oracles report on real-world violations of those regulations.
+Much like the insurance use cases, regulations can be written to a Blockchain and off-chain oracles can report on real-world violations of those regulations.
 After a violation is reported, a smart contract can automatically apply the penalty or sanction for breaking the regulation.
 As the system is auditable, penalized parties have a full history of what led to their punishment, providing means for them to appeal if there was a mistake.
 
@@ -162,20 +162,19 @@ As the system is auditable, penalized parties have a full history of what led to
 In this subsection, we describe uses cases that could use Blockchain technology, but most likely should not.
 
 \subsubsection{Interoperation}
-Blockchain technology can facilitate the interoperation of multtiples systems.
+Blockchain technology can facilitate the interoperation of multiples systems.
 It can provide a place for multiple systems to write their data and make requests of other systems.
 Using smart contracts it can convert those requests to the appropriate form to allow them to be parsed by other systems.\
-This is a poor use cases because it does not rely on shared governance, consensus, or provenance.
+This is a poor use case because it does not rely on shared governance, consensus, or provenance.
 This use case can more easily be accomplished with a standard program and a database.
 
 \subsubsection{Gambling}
-A Blockchain system could record bets, execute games, deduct funds in the case of lose, and payout in the case of a win.
-The audibility of such a system could confidence to the players of the system.
-Additionally, the system could have its own cryptocurrency, providing a one-stop shop for gambling.
+A Blockchain system could record bets, execute games, deduct funds in the case of loss, and pay out in the case of a win.
+Players could audit the game to ensure that execution was fair, and the system could operate its own cryptocurrency to handle the finances.
 
 This is a poor use case because it relies on two properties that are not well supported by Blockchain technology: random oracles and off-chain oracles.
 Because Blockchain needs to be deterministic for all miners to reach consensus, it is a poor platform for random number generation, a key component of games of chance.
-If the gambling is regarding the outcome of real-world events, then the system has to rely on off-chain oracles to settle bets. This could slow down the system and also introduce a single point of failure.
+If the gambling is regarding the outcome of real-world events, then the system has to rely on off-chain oracles to settle bets. This could slow down the system, reduce auditability, and also introduce a single point of failure.
 
 \subsubsection{Timestamping}
 Blockchain technology could be used to timestamp documents. Still, timestamping generally does not rely on any of Blockchain technologies key properties, and so Blockchain technology is likely overkill for this application.
