Moving around text based to separate results from discussion.

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -77,8 +77,9 @@
 \input{sections/introduction}
 \input{sections/methodology}
 \input{sections/results}
-\input{sections/use-cases}
 \input{sections/challenges}
+\input{sections/use-cases}
+\input{sections/discussion}
 \input{sections/related-works}
 \input{sections/conclusion}
 
